apply suggested changes